# skin

./: .gitignore  .prettierignore  LICENSE.txt  README.md  check.sh  commit-template.txt  eslint.config.js  forge.config.ts  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-mac.yml  ci.yml  main.yml  publish.yml
assets/: readme1.mov
docs/: README.md  modules.md
docs/main/: README.md
docs/sub/: README.md
src/: App.css  App.test.tsx  App.tsx  Assert.ts  CreateNewBookmarkPage.tsx  SearchBookmarkPage.tsx  app.d.ts  color.css  data.d.ts  database.ts  debug.ts  dom.ts  hotkey.ts  index.css  index.html  index.ts  main.ts  main.tsx  preload.ts  renderer.ts  styles.css  sub.ts  theme.ts  zindex.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AddButton.ts  BookmarkItemColorTheme.ts  CreateNewBookmark.ts  GlobalKeybind.ts  Keys.ts  PredicateInputBox.ts  SuggestionWindow.ts  TagItem.ts
src-tauri/bindings/export/: ColorTheme.d.ts  Config.d.ts  DbModels.d.ts  Keybinds.d.ts
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_model.rs  config_path.rs  fetch_website_content.rs  file_change_watcher.rs  global_hotkey.rs  lib.rs  main.rs
src-tauri/src/db/: commands.rs  error.rs  fuzzy_find_tag.rs  migrations.rs  mod.rs  models.rs  test_test.rs  tests.rs
src/AppTests/: App.test.tsx  autoInputUrl.test.tsx
src/Button/: test.test.tsx
src/CreateNewBkmk/: CreateNewBkmk.tsx  InputTags.tsx
tools/: generate-docs.sh
(+221 files in other folders)
